cmake_minimum_required(VERSION 3.16)
project(LetCodeC__)

set(CMAKE_CXX_STANDARD 14)

add_executable(LetCodeC__ main.cpp)
add_executable(_107_ "BFS/_107_Binary Tree Level Order Traversal II/Solution.cpp")
add_executable(_1_ "Array/_1_Two Sum/Solution.cpp")
add_executable(_11_ "Array/_11_Container With Most Water/Solution.cpp" "Array/_11_Container With Most Water/Solution.h")
add_executable(_3_ "Array/_3_ 3Sum/Solution.cpp" "Array/_3_ 3Sum/Solution.h")
add_executable(_16_ "Array/_16_ 3Sum Closest/Solution.cpp" "Array/_16_ 3Sum Closest/Solution.h")