cmake_minimum_required(VERSION 3.16)
project(LetCodeC__)

set(CMAKE_CXX_STANDARD 14)

add_executable(LetCodeC__ main.cpp)
add_executable(_107_ "BFS/_107_Binary Tree Level Order Traversal II/Solution.cpp" )
add_executable(_1_ "Array/_1_Two Sum/Solution.cpp")
add_executable(_11_ "Array/_11_Container With Most Water/Solution.cpp" "Array/_11_Container With Most Water/Solution.h")
add_executable(_3_ "Array/_3_ 3Sum/Solution.cpp" "Array/_3_ 3Sum/Solution.h")
add_executable(_16_ "Array/_16_ 3Sum Closest/Solution.cpp" "Array/_16_ 3Sum Closest/Solution.h")
add_executable(_101_ "BFS/_101_Symmetric Tree/Solution.cpp" "BFS/_101_Symmetric Tree/Solution.h" )
add_executable(_28_ "Strings/_28_ Implement strStr()/Solution.cpp" "Strings/_28_ Implement strStr()/Solution.h")
add_executable(_94_ "Tree/_94_Binary Tree Inorder Traversal/Solution.cpp" "Tree/_94_Binary Tree Inorder Traversal/Solution.h")
add_executable(_145_ "Tree/_145_Binary Tree Postorder Traversal/Solution.cpp" "Tree/_145_Binary Tree Postorder Traversal/Solution.h")
add_executable(_144_ "Tree/_144_Binary Tree Preorder Traversal/Solution.cpp" "Tree/_144_Binary Tree Preorder Traversal/Solution.h" )

